--- a/package.json
+++ b/package.json
@@ -1,24 +1,25 @@
 {
-  "name": "boilerplate",
-  "version": "1.0.0",
-  "description": "CSS compiler for the Boilerplate system",
-  "scripts": {
-    "build": "gulp build",
-    "compile": "gulp css",
-    "watch": "gulp",
-    "gulp": "gulp"
-  },
-  "browserslist": [
-    "last 3 versions"
-  ],
-  "author": "John Doe",
-  "license": "MIT",
-  "private": true,
-  "devDependencies": {
-    "gulp": "^4.0.2",
-    "gulp-autoprefixer": "^8.0.0",
-    "gulp-sass": "^5.1.0",
-    "gulp-sourcemaps": "^3.0.0",
-    "sass": "^1.53.0"
-  }
+    "name": "invisible-sun",
+    "version": "1.0.0",
+    "description": "CSS compiler for the Invisible Sun system",
+    "scripts": {
+        "build": "gulp build",
+        "compile": "gulp css",
+        "watch": "gulp",
+        "gulp": "gulp"
+    },
+    "browserslist": [
+        "last 3 versions"
+    ],
+    "author": "DeviousDVS",
+    "license": "MIT",
+    "private": true,
+    "devDependencies": {
+        "gulp": "^4.0.2",
+        "gulp-autoprefixer": "^8.0.0",
+        "gulp-cli": "^2.3.0",
+        "gulp-sass": "^5.1.0",
+        "gulp-sourcemaps": "^3.0.0",
+        "sass": "^1.53.0"
+    }
 }
